--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="HQn-zh-aQJ">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -123,6 +123,182 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2626" y="1286"/>
+        </scene>
+        <!--Sent Memes-->
+        <scene sceneID="biu-1p-QQj">
+            <objects>
+                <tableViewController id="kj5-u9-urx" customClass="SentMemesTableViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="6Y5-Qo-e43">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="NTP-sa-MS3" customClass="MemeTableViewCell" customModule="MemeMe" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NTP-sa-MS3" id="lEV-fs-5Az">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="kj5-u9-urx" id="ALZ-a4-6zf"/>
+                            <outlet property="delegate" destination="kj5-u9-urx" id="sCM-oA-DdN"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Sent Memes" id="n4X-pc-jrV">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="GJ2-gC-g7y">
+                            <connections>
+                                <segue destination="vXZ-lx-hvc" kind="presentation" id="Hyn-En-pyj"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xVO-qJ-fm7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2099" y="991"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Odu-5v-CPJ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="j4r-3P-Cht" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="table" id="SP6-yU-gGC"/>
+                    <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CQe-AC-NzI">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="kj5-u9-urx" kind="relationship" relationship="rootViewController" id="diK-o8-RQE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="01x-6F-z35" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1673" y="991"/>
+        </scene>
+        <!--Sent Memes-->
+        <scene sceneID="q4V-Vt-c2e">
+            <objects>
+                <collectionViewController id="nlg-zb-o1H" customClass="SentMemesCollectionViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="ucQ-SM-qha">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0au-nB-3fS">
+                            <size key="itemSize" width="128" height="72"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="3Wu-e1-jS7" customClass="MemeCollectionViewCell" customModule="MemeMe" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="128" height="72"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="128" height="72"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zDM-qP-WgT">
+                                            <rect key="frame" x="0.0" y="0.0" width="160" height="90"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="csp-ib-VQg">
+                                            <rect key="frame" x="0.0" y="3" width="160" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cn3-aH-mkh">
+                                            <rect key="frame" x="0.0" y="66" width="160" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="csp-ib-VQg" firstAttribute="top" secondItem="3Wu-e1-jS7" secondAttribute="topMargin" constant="-5" id="1Mq-0f-byx"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="Cn3-aH-mkh" secondAttribute="bottom" constant="-5" id="8PM-7K-Pp0"/>
+                                    <constraint firstItem="Cn3-aH-mkh" firstAttribute="leading" secondItem="3Wu-e1-jS7" secondAttribute="leadingMargin" constant="-8" id="Agh-BF-mh0"/>
+                                    <constraint firstItem="csp-ib-VQg" firstAttribute="leading" secondItem="3Wu-e1-jS7" secondAttribute="leadingMargin" constant="-8" id="Las-rn-KcZ"/>
+                                    <constraint firstItem="zDM-qP-WgT" firstAttribute="top" secondItem="3Wu-e1-jS7" secondAttribute="topMargin" constant="-8" id="fFN-e5-kSW"/>
+                                    <constraint firstItem="zDM-qP-WgT" firstAttribute="leading" secondItem="3Wu-e1-jS7" secondAttribute="leadingMargin" constant="-8" id="kBM-PL-JaR"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="csp-ib-VQg" secondAttribute="trailing" constant="-8" id="kb9-hf-MIa"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="zDM-qP-WgT" secondAttribute="trailing" constant="-8" id="pVk-Nn-1hT"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="Cn3-aH-mkh" secondAttribute="trailing" constant="-8" id="w0I-Qc-xjY"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="zDM-qP-WgT" secondAttribute="bottom" constant="-8" id="xyT-06-gHS"/>
+                                </constraints>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="nlg-zb-o1H" id="2k4-eZ-rXV"/>
+                            <outlet property="delegate" destination="nlg-zb-o1H" id="ol3-5D-Uky"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Sent Memes" id="8Sf-bd-L32">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="04n-9r-guz">
+                            <connections>
+                                <segue destination="vXZ-lx-hvc" kind="presentation" id="mG6-eX-t3k"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="flowLayout" destination="0au-nB-3fS" id="GeL-lD-xg2"/>
+                    </connections>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vfz-BH-cvX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2099" y="1590"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="sME-80-Ex4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="oN7-fF-EUx" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="collection" id="9eJ-ly-UsK"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ED3-w3-sqx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="nlg-zb-o1H" kind="relationship" relationship="rootViewController" id="M9e-sh-lcU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ubL-Nj-LHa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1673" y="1590"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Tyf-Je-AXL">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="HQn-zh-aQJ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Dhe-62-NbQ">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="j4r-3P-Cht" kind="relationship" relationship="viewControllers" id="vT0-Ue-Yn4"/>
+                        <segue destination="oN7-fF-EUx" kind="relationship" relationship="viewControllers" id="TWB-oO-Na1"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xuz-a3-GGx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1193" y="1286"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="collection" width="30" height="30"/>
+        <image name="table" width="30" height="30"/>
+    </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="mG6-eX-t3k"/>
+    </inferredMetricsTieBreakers>
 </document>
